added all possible frameworks to Docker image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -37,4 +37,7 @@ RUN conda init \
 && conda install -n diabetic matplotlib \
 && conda install -n diabetic opencv \
 && conda install -n diabetic pandas \
-&& conda install -n diabetic scikit-learn
+&& conda install -n diabetic scikit-learn \
+&& conda install -n diabetic keras \
+&& conda install -n diabetic tensorflow-gpu \
+&& conda install -n diabetic pytorch 
