--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -39,5 +39,5 @@ RUN conda init \
 && conda install -n diabetic pandas \
 && conda install -n diabetic scikit-learn \
 && conda install -n diabetic keras \
-&& conda install -n diabetic tensorflow-gpu \
+&& conda install -n diabetic tensorflow-gpu=1.14 \
 && conda install -n diabetic Pillow 
