changed Dockerfile to allow creating diagrams of models

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -40,4 +40,5 @@ RUN conda init \
 && conda install -n diabetic scikit-learn \
 && conda install -n diabetic keras \
 && conda install -n diabetic tensorflow-gpu=1.14 \
-&& conda install -n diabetic Pillow 
+&& conda install -n diabetic Pillow  \
+&& conda install -n diabetic pydot
