added conda env for tensorflow 2

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,7 +21,8 @@ RUN apt update \
 && apt install unzip -y \
 && apt install nomacs -y \
 && apt install git -y \
-&& apt install nano -y
+&& apt install nano -y \
+&& apt install gedit -y
 
 #gets the anaconda package, installs it, and adds it to the path
 #gets the anaconda package
@@ -40,7 +41,6 @@ RUN conda init \
 && conda install -n diabetic opencv \
 && conda install -n diabetic pandas \
 && conda install -n diabetic scikit-learn \
-&& conda install -n diabetic keras \
 && conda install -n diabetic tensorflow-gpu=1.14 \
 && conda install -n diabetic Pillow  \
 && conda install -n diabetic pydot \ 
@@ -57,8 +57,7 @@ RUN conda init \
 && conda install -n diabetic2 opencv \
 && conda install -n diabetic2 pandas \
 && conda install -n diabetic2 scikit-learn \
-&& conda install -n diabetic2 keras \
-&& conda install -n diabetic2 tensorflow-gpu \
+&& conda install -n diabetic2 tensorflow-gpu=2.0.0 \
 && conda install -n diabetic2 Pillow  \
 && conda install -n diabetic2 pydot \ 
 && conda install -n diabetic2 seaborn
@@ -66,4 +65,5 @@ RUN conda init \
 RUN conda init bash \
 && source ~/.bashrc \
 && conda activate diabetic2 \ 
-&& pip install -U efficientnet
+&& pip install -U efficientnet \
+&& pip install tensorflow-addons==0.6.0
