--- a/envs/env2.yaml
+++ b/envs/env2.yaml
@@ -13,7 +13,7 @@ dependencies:
   - cairo=1.14.12=h8948797_3
   - certifi=2019.11.28=py37_0
   - cudatoolkit=10.0.130=0
-  - cudnn=7.6.5=cuda10.0_0
+  - cudnn=7.6.4=cuda10.0_0
   - cupti=10.0.130=0
   - cycler=0.10.0=py37_0
   - dbus=1.13.12=h746ee38_0
@@ -42,7 +42,6 @@ dependencies:
   - keras-applications=1.0.8=py_0
   - keras-preprocessing=1.1.0=py_1
   - kiwisolver=1.1.0=py37he6710b0_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
@@ -65,37 +64,37 @@ dependencies:
   - mkl_fft=1.0.15=py37ha843d7b_0
   - mkl_random=1.1.0=py37hd6b4f25_0
   - ncurses=6.1=he6710b0_1
-  - numpy=1.18.1=py37h4f9e942_0
-  - numpy-base=1.18.1=py37hde5b4d6_1
+  - numpy=1.17.4=py37hc1035e2_0
+  - numpy-base=1.17.4=py37hde5b4d6_0
   - olefile=0.46=py_0
   - opencv=3.4.2=py37h6fd60c2_1
   - openssl=1.1.1d=h7b6447c_3
   - opt_einsum=3.1.0=py_0
-  - pandas=1.0.0=py37h0573a6f_0
+  - pandas=0.25.3=py37he6710b0_0
   - pango=1.42.4=h049681c_0
   - patsy=0.5.1=py37_0
   - pcre=8.43=he6710b0_0
-  - pillow=7.0.0=py37hb39fc2d_0
-  - pip=20.0.2=py37_1
+  - pillow=6.2.1=py37h34e0f95_0
+  - pip=19.3.1=py37_0
   - pixman=0.38.0=h7b6447c_0
   - protobuf=3.11.2=py37he6710b0_0
   - py-opencv=3.4.2=py37hb342d67_1
   - pydot=1.4.1=py37_0
-  - pyparsing=2.4.6=py_0
+  - pyparsing=2.4.5=py_0
   - pyqt=5.9.2=py37h05f1152_2
-  - python=3.7.6=h0371630_2
+  - python=3.7.5=h0371630_0
   - python-dateutil=2.8.1=py_0
   - pytz=2019.3=py_0
   - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
-  - scikit-learn=0.22.1=py37hd81dba3_0
+  - scikit-learn=0.22=py37hd81dba3_0
   - scipy=1.3.2=py37h7c811a0_0
   - seaborn=0.9.0=pyh91ea838_1
-  - setuptools=45.1.0=py37_0
+  - setuptools=42.0.2=py37_0
   - sip=4.19.8=py37hf484d3e_0
-  - six=1.14.0=py37_0
+  - six=1.13.0=py37_0
   - sqlite=3.30.1=h7b6447c_0
-  - statsmodels=0.11.0=py37h7b6447c_0
+  - statsmodels=0.10.1=py37hdd07704_0
   - tensorboard=2.0.0=pyhb38c66f_1
   - tensorflow=2.0.0=gpu_py37h768510d_0
   - tensorflow-base=2.0.0=gpu_py37h0ec5d1f_0
@@ -103,8 +102,8 @@ dependencies:
   - termcolor=1.1.0=py37_1
   - tk=8.6.8=hbc83047_0
   - tornado=6.0.3=py37h7b6447c_0
-  - werkzeug=0.16.1=py_0
-  - wheel=0.34.1=py37_0
+  - werkzeug=0.16.0=py_0
+  - wheel=0.33.6=py37_0
   - wrapt=1.11.2=py37h7b6447c_0
   - xz=5.2.4=h14c3975_4
   - zlib=1.2.11=h7b6447c_3
@@ -113,8 +112,11 @@ dependencies:
     - decorator==4.4.1
     - efficientnet==1.0.0
     - imageio==2.6.1
+    - keract==3.0.1
+    - keras==2.3.1
     - networkx==2.4
     - pywavelets==1.1.1
+    - pyyaml==5.3
     - scikit-image==0.16.2
     - tensorflow-addons==0.6.0
     - tensorflow-gpu==2.0.0
